# homo-geometricus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/Affine/: Affine.hpp
include/Decomposition/: Decomposition.hpp
include/Euclid/: Euclid.hpp
include/Hamilton/: Hamilton.hpp  _Hamilton_by_Eigen.hpp
include/Quaternion/: Quaternion.hpp
include/S3D/Affine/: Affine.hpp
include/S3D/Decomposition/: Decomposition.hpp  _Decomposition_by_Eigen.hpp
include/S3D/Euclid/: Euclid.hpp
include/S3D/Hamilton/: Hamilton.hpp
include/S3D/Quaternion/: Quaternion.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  Test_s3d.hpp  WorldTest.cpp  WorldTest.hpp
test/Affine/: Test_Affine.cpp  Test_Affine.hpp
test/Decomposition/: Test_Decomposition.cpp  Test_Decomposition.hpp
test/Euclid/: Test_Euclid.cpp  Test_Euclid.hpp
test/Hamilton/: Test_Hamilton.cpp  Test_Hamilton.hpp
test/Quaternion/: Test_Quaternion.cpp  Test_Quaternion.hpp
test/S3D/: Test_s3d.hpp
test/S3D/Affine/: Test_Affine.cpp  Test_Affine.hpp
test/S3D/Decomposition/: Test_Decomposition.cpp  Test_Decomposition.hpp
test/S3D/Euclid/: Test_Euclid.cpp  Test_Euclid.hpp
test/S3D/Hamilton/: Test_Hamilton.cpp  Test_Hamilton.hpp
test/S3D/Quaternion/: Test_Quaternion.cpp  Test_Quaternion.hpp
